--- a/src/components/Video/VideoContainer/VideoContainer.module.scss
+++ b/src/components/Video/VideoContainer/VideoContainer.module.scss
@@ -1,7 +1,4 @@
 .videoContainer {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  // gap: 40px;
-  width: auto;
 }
